# freetype-gl

./: Makefile.am  aclocal.m4  configure.ac  freetype-gl-err.c  freetype-gl-errdef.h  freetype-gl.h  ftgl-utils.c  ftgl-utils.h  opengl.h  texture-font.c  texture-font.h
debian/: control.in  files
